<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/username_register_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/gray" >

    <EditText
        android:id="@+id/newUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
 		        android:hint="@string/newUsername"
        android:maxLines="1"
              android:singleLine="true"
              android:inputType="text|textEmailAddress"
              android:maxLength="20" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newPassword"
        android:maxLines="1"
              android:singleLine="true"
              android:inputType="textPassword"
              android:maxLength="20" />

    <EditText
        android:id="@+id/newPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newPasswordConfirm"
        android:maxLines="1"
              android:singleLine="true"
              android:inputType="textPassword"
              android:maxLength="20" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerBtn"
        android:textStyle="bold" />

    <TextView
	    android:id="@+id/link_login"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:layout_marginBottom="24sp"
	    android:autoLink="all"
	    android:clickable="true"
	    android:gravity="center"
	    android:textSize="16sp" />
		    
</LinearLayout>
