<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@drawable/sky" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

          
            <TableLayout
                android:id="@+id/monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <TableRow
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sa"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow
                    android:id="@+id/columns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

                    <TextView
                        android:id="@+id/colHashkey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/hashKey"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#0000ff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/colHostname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/hostname"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#0000ff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/colIP"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/ip"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#0000ff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/colMac"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/mac"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#0000ff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/colStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/status"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#0000ff"
                        android:textSize="12sp" />
                </TableRow>
            </TableLayout>

  

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/addBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@drawable/btnstyle"
            android:drawableTop="@drawable/add"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/delBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@drawable/btnstyle"
            android:drawableTop="@drawable/delete"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/viewBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@drawable/btnstyle"
            android:drawableTop="@drawable/view"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/view"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/viewAllBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@drawable/btnstyle"
            android:drawableTop="@drawable/viewall"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/viewAll"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <Button
            android:id="@+id/terminateBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@drawable/btnstyle"
            android:drawableTop="@drawable/terminate"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/terminate"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>