<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/username_login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/gray" >
        
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:maxLines="1"
              android:singleLine="true"
              android:inputType="text|textEmailAddress"
              android:maxLength="20" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:maxLines="1"
              android:singleLine="true"
              android:inputType="textPassword"
              android:maxLength="20" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:textStyle="bold" />

	<TextView
	    android:id="@+id/link_register"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:layout_marginBottom="24sp"
	    android:autoLink="all"
	    android:clickable="true"
	    android:gravity="center"
	    android:textSize="16sp" />
		    
</LinearLayout>
