<?xml version="1.0" encoding="utf-8"?> 
    
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative4"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@drawable/gray" >
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="50dp"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/container4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:id="@+id/allResultsTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <TableRow
                    android:id="@+id/allPickNumHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:id="@+id/allPickNumMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pickNumMsg"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/pickNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:inputType="numberDecimal"
                        android:hint="@string/allPickNum"
                        android:maxLength="5" >
                    </EditText>

                </TableRow> 
                
                <TableRow
                    android:id="@+id/columns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp" >

					<TextView
                        android:id="@+id/colHashKey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/hashKey"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#0000ff"
                        android:textSize="12sp" />
                    
                    <TextView
                        android:id="@+id/colidNmapJob1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/idNmapJob"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#0000ff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/colidJobResult1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/idJobResult"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#0000ff"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/colresultTime1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/border"
                        android:gravity="center_horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:text="@string/resultTime"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#0000ff"
                        android:textSize="12sp" />

                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/offlinemsg1"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="25dp"
                android:text="@string/offline"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/nmapDetailsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/btnstyle"
        android:drawableTop="@drawable/view"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/nmapDetails"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

</RelativeLayout>
